--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,7 +15,8 @@
     <corp.wmsoft.android.lib.filemanager.MountPointView
         android:id="@+id/mount_points_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
 
     <corp.wmsoft.android.lib.filemanager.FileManagerView
         android:id="@+id/file_manager_view"
