--- a/filemanager/src/main/res/drawable/ic_fso_type_video_24dp.xml
+++ b/filemanager/src/main/res/drawable/ic_fso_type_video_24dp.xml
@@ -4,6 +4,6 @@
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-        android:fillColor="#FF000000"
+        android:fillColor="@color/wm_fm_black_transparent"
         android:pathData="M13,9H18.5L13,3.5V9M6,2H14L20,8V20A2,2 0,0 1,18 22H6C4.89,22 4,21.1 4,20V4C4,2.89 4.89,2 6,2M17,19V13L14,15.2V13H7V19H14V16.8L17,19Z"/>
 </vector>
