--- a/filemanager/src/main/res/values/colors.xml
+++ b/filemanager/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <!-- A black color with some transparency -->
     <color name="wm_fm_black_transparent">#99000000</color>
 
-    <color name="wm_fm_colorPrimary">#015360</color>
-    <color name="wm_fm_colorAccent">#33bc14</color>
+    <color name="wm_fm_colorPrimary">#ff015360</color>
+    <color name="wm_fm_colorAccent">#ff33bc14</color>
 
 </resources>
