--- a/filemanager/src/main/res/layout/wm_fm_file_manager_view_layout.xml
+++ b/filemanager/src/main/res/layout/wm_fm_file_manager_view_layout.xml
@@ -14,24 +14,32 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/mountPoints"
+        <LinearLayout
+            android:id="@+id/topPanel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabGravity="fill"
-            app:tabMode="scrollable"
-            app:tabIndicatorColor="@color/wm_fm_colorAccent"/>
+            android:orientation="vertical">
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:background="?android:attr/listDivider"/>
+            <android.support.design.widget.TabLayout
+                android:id="@+id/mountPoints"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:tabGravity="fill"
+                app:tabMode="scrollable"
+                app:tabIndicatorColor="@color/wm_fm_colorAccent"/>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/breadCrumbList"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/wm_fm_breadcrumb_item_min_size"
-            app:adapter="@{breadCrumbAdapter}"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:background="?android:attr/listDivider"/>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/breadCrumbList"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/wm_fm_breadcrumb_item_min_size"
+                app:adapter="@{breadCrumbAdapter}"/>
+
+        </LinearLayout>
 
         <View
             android:layout_width="match_parent"
