--- a/filemanager/src/main/res/values/dimen.xml
+++ b/filemanager/src/main/res/values/dimen.xml
@@ -28,5 +28,6 @@
     <dimen name="wm_fm_breadcrumb_item_margin_space">3dp</dimen>
     <!-- The breadcrumb item minimal size -->
     <dimen name="wm_fm_breadcrumb_item_min_size">32dp</dimen>
+    <dimen name="wm_fm_breadcrumb_item_max_size">33dp</dimen>
 
 </resources>
