--- a/filemanager/src/main/res/layout/wm_fm_file_manager_view_layout.xml
+++ b/filemanager/src/main/res/layout/wm_fm_file_manager_view_layout.xml
@@ -14,6 +14,7 @@
         android:layout_height="match_parent">
 
         <android.support.design.widget.AppBarLayout
+            android:id="@+id/appBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/wm_fm_top_panel">
@@ -76,7 +77,6 @@
             android:id="@+id/fsoList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingBottom="@dimen/wm_fm_breadcrumb_item_max_size"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             app:adapter="@{fsoAdapter}"/>
 
