--- a/filemanager/src/main/res/layout/wm_fm_navigation_view_icons_item.xml
+++ b/filemanager/src/main/res/layout/wm_fm_navigation_view_icons_item.xml
@@ -11,6 +11,10 @@
         android:id="@+id/navigation_view_details_item"
         android:layout_width="@dimen/wm_fm_navigation_grid_width"
         android:layout_height="@dimen/wm_fm_navigation_grid_height"
+        android:paddingStart="@dimen/wm_fm_default_margin"
+        android:paddingLeft="@dimen/wm_fm_default_margin"
+        android:paddingEnd="@dimen/wm_fm_default_margin"
+        android:paddingRight="@dimen/wm_fm_default_margin"
         android:orientation="vertical"
         android:gravity="center_horizontal"
         android:onClick="@{() -> presenter.onFSOPicked(viewModel)}"
