--- a/filemanager/src/main/res/layout/wm_fm_navigation_view_details_item.xml
+++ b/filemanager/src/main/res/layout/wm_fm_navigation_view_details_item.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="corp.wmsoft.android.lib.filemanager.ui.widgets.FixedSizeImageView"/>
         <variable name="viewModel" type="corp.wmsoft.android.lib.filemanager.ui.widgets.nav.FSOViewModel"/>
         <variable name="presenter" type="corp.wmsoft.android.lib.filemanager.ui.widgets.nav.IFileManagerViewContract.Presenter"/>
     </data>
@@ -23,8 +24,7 @@
             android:id="@+id/navigation_view_item_icon"
             android:layout_width="@dimen/wm_fm_default_row_height"
             android:layout_height="@dimen/wm_fm_default_row_height"
-            app:iconByFso="@{viewModel}"
-            tools:src="@drawable/ic_fso_default_24dp"
+            app:iconByFso="@{viewModel.fso}"
             android:layout_gravity="center_vertical"
             android:contentDescription="@null" />
 
