small update, to show how to call FM from fragment

--- a/app/src/main/res/menu/menu_fm.xml
+++ b/app/src/main/res/menu/menu_fm.xml
@@ -7,13 +7,7 @@
     <item
         android:id="@+id/action_show_as_dialog"
         android:orderInCategory="100"
-        android:title="show_as_dialog"
-        app:showAsAction="never" />
-
-    <item
-        android:id="@+id/action_show_as_fragment"
-        android:orderInCategory="101"
-        android:title="show_as_fragment"
+        android:title="dialog from activity"
         app:showAsAction="never" />
 
 </menu>
