--- a/filemanager/src/main/res/layout/wm_fm_file_manager_view_layout.xml
+++ b/filemanager/src/main/res/layout/wm_fm_file_manager_view_layout.xml
@@ -6,86 +6,79 @@
         <import type="android.view.View"/>
         <variable name="fsoAdapter" type="corp.wmsoft.android.lib.filemanager.adapters.FSOViewModelAdapter"/>
         <variable name="breadCrumbAdapter" type="corp.wmsoft.android.lib.filemanager.adapters.BreadCrumbAdapter"/>
-        <variable name="viewModel" type="corp.wmsoft.android.lib.filemanager.ui.widgets.nav.FileManagerViewModel"/>
+        <variable name="viewModel" type="corp.wmsoft.android.lib.filemanager.ui.FileManagerViewModel"/>
     </data>
 
-    <android.support.design.widget.CoordinatorLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/appBar"
+        <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/wm_fm_top_panel">
+            android:layout_height="match_parent">
 
-            <android.support.design.widget.CollapsingToolbarLayout
+            <android.support.design.widget.AppBarLayout
+                android:id="@+id/appBar"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+                android:layout_height="wrap_content"
+                android:background="@android:color/white">
 
-                <android.support.v7.widget.Toolbar
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/wm_fm_breadcrumb_item_max_size"
-                    android:layout_gravity="bottom"
-                    app:contentInsetStart="0dp"
-                    app:contentInsetLeft="0dp"
-                    app:layout_scrollFlags="scroll|enterAlways">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="1px"
-                            android:background="?android:attr/listDivider"/>
-
-                        <android.support.v7.widget.RecyclerView
-                            android:id="@+id/breadCrumbList"
-                            android:layout_width="match_parent"
-                            android:layout_height="@dimen/wm_fm_breadcrumb_item_min_size"
-                            app:adapter="@{breadCrumbAdapter}"/>
-
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="1px"
-                            android:background="?android:attr/listDivider"/>
-
-                    </LinearLayout>
-
-                </android.support.v7.widget.Toolbar>
-
-                <android.support.design.widget.TabLayout
-                    android:id="@+id/mountPoints"
+                <android.support.design.widget.CollapsingToolbarLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="top"
-                    android:layout_marginBottom="@dimen/wm_fm_breadcrumb_item_max_size"
-                    app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
-                    app:layout_collapseMode="pin"
-                    app:tabGravity="fill"
-                    app:tabMode="scrollable"
-                    app:tabIndicatorColor="@color/wm_fm_colorAccent"/>
+                    app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            </android.support.design.widget.CollapsingToolbarLayout>
+                    <android.support.design.widget.TabLayout
+                        android:id="@+id/mountPoints"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:tabGravity="fill"
+                        app:tabMode="scrollable"
+                        app:tabIndicatorColor="@color/wm_fm_colorAccent"/>
 
-        </android.support.design.widget.AppBarLayout>
+                </android.support.design.widget.CollapsingToolbarLayout>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/fsoList"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            app:adapter="@{fsoAdapter}"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-        <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
-            android:layout_gravity="center"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1px"
+                        android:background="?android:attr/listDivider"/>
 
-    </android.support.design.widget.CoordinatorLayout>
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/breadCrumbList"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:adapter="@{breadCrumbAdapter}"/>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1px"
+                        android:background="?android:attr/listDivider"/>
+
+                </LinearLayout>
+
+            </android.support.design.widget.AppBarLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/fsoList"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                app:adapter="@{fsoAdapter}"/>
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
+                android:layout_gravity="center"/>
+
+        </android.support.design.widget.CoordinatorLayout>
+
+    </LinearLayout>
 
 </layout>
