--- a/filemanager/src/main/res/layout/wm_fm_navigation_view_simple_item.xml
+++ b/filemanager/src/main/res/layout/wm_fm_navigation_view_simple_item.xml
@@ -5,8 +5,8 @@
 
     <data>
         <import type="corp.wmsoft.android.lib.filemanager.ui.widgets.FixedSizeImageView"/>
-        <variable name="viewModel" type="corp.wmsoft.android.lib.filemanager.ui.widgets.nav.FSOViewModel"/>
-        <variable name="presenter" type="corp.wmsoft.android.lib.filemanager.ui.widgets.nav.IFileManagerViewContract.Presenter"/>
+        <variable name="viewModel" type="corp.wmsoft.android.lib.filemanager.ui.FSOViewModel"/>
+        <variable name="presenter" type="corp.wmsoft.android.lib.filemanager.ui.IFileManagerViewContract.Presenter"/>
     </data>
 
     <LinearLayout
