--- a/filemanager/src/main/res/layout/wm_fm_file_manager_view_layout.xml
+++ b/filemanager/src/main/res/layout/wm_fm_file_manager_view_layout.xml
@@ -1,6 +1,6 @@
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <import type="android.view.View"/>
@@ -9,76 +9,59 @@
         <variable name="viewModel" type="corp.wmsoft.android.lib.filemanager.ui.FileManagerViewModel"/>
     </data>
 
-    <LinearLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        tools:context=".ui.FileManagerActivity">
 
-        <android.support.design.widget.CoordinatorLayout
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/app_bar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:theme="@style/AppTheme.AppBarOverlay">
 
-            <android.support.design.widget.AppBarLayout
-                android:id="@+id/appBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/white">
-
-                <android.support.design.widget.CollapsingToolbarLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
-                    <android.support.design.widget.TabLayout
-                        android:id="@+id/mountPoints"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:tabGravity="fill"
-                        app:tabMode="scrollable"
-                        app:tabIndicatorColor="@color/wm_fm_colorAccent"/>
-
-                </android.support.design.widget.CollapsingToolbarLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1px"
-                        android:background="?android:attr/listDivider"/>
-
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/breadCrumbList"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:adapter="@{breadCrumbAdapter}"/>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1px"
-                        android:background="?android:attr/listDivider"/>
-
-                </LinearLayout>
-
-            </android.support.design.widget.AppBarLayout>
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/fsoList"
+            <android.support.design.widget.CollapsingToolbarLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:clipToPadding="false"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                app:adapter="@{fsoAdapter}"/>
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <ProgressBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
-                android:layout_gravity="center"/>
+                <android.support.design.widget.TabLayout
+                    android:id="@+id/mountPoints"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:tabGravity="fill"
+                    app:tabMode="scrollable"
+                    app:tabIndicatorColor="@color/wm_fm_colorAccent"/>
 
-        </android.support.design.widget.CoordinatorLayout>
+            </android.support.design.widget.CollapsingToolbarLayout>
 
-    </LinearLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/breadCrumbList"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/wm_fm_breadcrumb_item_min_size"
+                android:paddingStart="@dimen/wm_fm_default_margin"
+                android:paddingLeft="@dimen/wm_fm_default_margin"
+                android:paddingEnd="@dimen/wm_fm_default_margin"
+                android:paddingRight="@dimen/wm_fm_default_margin"
+                app:adapter="@{breadCrumbAdapter}"/>
+
+        </android.support.design.widget.AppBarLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/fsoList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            app:adapter="@{fsoAdapter}"/>
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"/>
+
+    </android.support.design.widget.CoordinatorLayout>
 
 </layout>
