--- a/filemanager/src/main/res/values/styles.xml
+++ b/filemanager/src/main/res/values/styles.xml
@@ -19,6 +19,10 @@
         <item name="android:background">?android:attr/windowBackground</item>
     </style>
 
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
     <style name="AppTheme.Dialog" parent="Theme.AppCompat.Light.Dialog.Alert" >
         <item name="colorPrimary">@color/wm_fm_colorPrimary</item>
         <item name="colorPrimaryDark">@color/wm_fm_colorPrimaryDark</item>
