- transfer all to activity

--- a/app/src/main/res/layout/activity_fm.xml
+++ b/app/src/main/res/layout/activity_fm.xml
@@ -21,10 +21,29 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <FrameLayout
-        android:id="@+id/contentPanel"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <Button
+            android:id="@+id/dirChooser"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="dir chooser (from activity)"/>
+
+        <Button
+            android:id="@+id/filePickerByMimeType"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="file picker by mime type (from activity)"/>
+
+        <FrameLayout
+            android:id="@+id/contentPanel"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
