--- a/filemanager/src/main/res/values/styles.xml
+++ b/filemanager/src/main/res/values/styles.xml
@@ -19,22 +19,35 @@
         <item name="android:background">?android:attr/windowBackground</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
-    <style name="AppTheme.Dialog" parent="Theme.AppCompat.Light.Dialog.Alert" >
+    <!-- Base application theme. -->
+    <style name="WMFMAppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/wm_fm_colorPrimary</item>
         <item name="colorPrimaryDark">@color/wm_fm_colorPrimaryDark</item>
         <item name="colorAccent">@color/wm_fm_colorAccent</item>
     </style>
 
-    <style name="AppTheme.Dialog.NoActionBar">
+    <style name="WMFMAppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="WMFMAppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="WMFMAppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="WMFMAppTheme.Dialog" parent="Theme.AppCompat.Light.Dialog.Alert" >
+        <item name="colorPrimary">@color/wm_fm_colorPrimary</item>
+        <item name="colorPrimaryDark">@color/wm_fm_colorPrimaryDark</item>
+        <item name="colorAccent">@color/wm_fm_colorAccent</item>
+    </style>
+
+    <style name="WMFMAppTheme.Dialog.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">false</item>
     </style>
 
-    <style name="AppTheme.Dialog.NoActionBar.NoTitle">
+    <style name="WMFMAppTheme.Dialog.NoActionBar.NoTitle">
         <item name="windowNoTitle">true</item>
     </style>
 
